--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,16 @@
         window.__REDUX_DEVTOOLS_EXTENSION__ && window.__REDUX_DEVTOOLS_EXTENSION__();
     </script> -->
     <meta charset="utf-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="A application to manage data from @Rajesh Kumar" />
+    <meta name="keywords" content="KanTime, KanTime Fire, KanTime ICE" />
+    <!--
+      manifest.json provides metadata used when your web app is installed on a
+      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    -->
+    <link rel="manifest" href="/manifest.json" />
     <title>DM App</title>
     <!-- <link rel="manifest" href="/manifest.json" /> -->
 </head>
